[package]
name = "bb8-tikv"
version = "0.1.0"
authors = ["Stepan Henek"]
edition = "2018"
description = "bb8 adapter for TiKV client"
license = "MIT"
readme = "README.md"
keywords = ["bb8", "pool", "tikv"]
repository = "https://github.com/shenek/bb8-tikv"
categories = ["database"]

[dependencies]
async-trait = "0.1"
bb8 = "0.8.1"
tikv-client = { git = "https://github.com/jmhrpr/client-rust.git", branch = "jdev-debug" }

[dev-dependencies]
futures = "0.3"
mock-tikv = { git = "https://github.com/tikv/client-rust", tag = "0.0.99" }
tokio = { version = "1.5", features = [ "sync", "rt-multi-thread", "macros" ] }

[[example]]
name = "raw"

[[example]]
name = "transactional"
